# palmsite

./: .gitignore  README.md  pyproject.toml
examples/: hiv-1_proteins.fasta  hiv-1_proteins.fasta.fai  hsrv_proteins.fasta  sars-cov-2_proteins.fasta  t4-proteins.fasta  turnip-mosaic-virus_proteins.fasta  turnip-mosaic-virus_proteins.fasta.fai  zikavirus_proteins.fasta
scripts/: analyze_motif_zerohot.py  assign_fasta_ids.py  chunk_fasta.py  chunked_fasta_to_embed.py  cif_summary.py  color_cif_by_weight.py  color_pdb_by_weight.py  command_resource_monitor.py  cv_fpr_plot.py  eval.py  evaluate_checkpoint.py  fasta_sampler.py  fasta_to_embed_h5.py  graph_clustering_bootstrap.py  h5_to_fasta.py  label_embed_h5.py  label_from_rdrpcatch_cdd_pfam_palmannot.py  label_from_rpsblast_and_hmmscan.py  make_palmsite_noise_mutant.py  peek_embeddings_h5.py  plot_attention.py  plot_iou_violin.py  plot_test_roc_pr_curves.py  plot_training_curve.py  plot_training_curve_with_loss.py  pooled_json_to_matrix.py  predict.py  rdrp_list  resource_benchmark.py  sample_fasta.py  split_fasta.py  split_fasta_folds.py  train.py  visualize_palmsite_noise_effect.py  visualize_palmsite_windowed_noise_effect.py
scripts/unused/: label_from_rdrpcatch_and_hmmscan.py  label_from_rdrpcatch_pfam_palmannot.py  label_from_rpsblast_and_palm_annot.py
src/palmsite/: _embed_impl.py  _predict_impl.py  cli.py  embed_shim.py  hf.py  infer_simple.py  sanitize.py
tests/: test_cli_smoke.py
