[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palmsite"
version = "0.1.1"
description = "PalmSite: RdRP catalytic center predictor"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name="Ryota Sugimoto"}]
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
  "numpy>=1.23",
  "h5py>=3.10",
  "huggingface_hub>=0.24",
  # Install BOTH backends by default:
  "esm==3.1.4",
  "torch>=2.2,<3",
]

[project.scripts]
palmsite = "palmsite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# ship example files if you placed them under palmsite/assets/examples/
[tool.setuptools.package-data]
palmsite = ["assets/examples/*"]
